# metropoliten

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  vehicle_parser_v1.py  vehicle_parser_v2.py  vehicle_parser_v3.py
data/output/: results.json
src/vehicle_ocr/: __init__.py  cli.py  config.py  parser.py  preprocessor.py
tests/: test_parser.py
